--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web.servlet=TRACE
 
 frontend.url=${FRONTEND_URL}
+# frontend.url=${FRONTEND_URL:http://localhost:5173}
